apps/goatlint/src/snapshots/fixtures__cli__config_ignore_patterns__ignore_directory_-c eslintrc.json@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c eslintrc.json
working directory: fixtures/cli/config_ignore_patterns/ignore_directory
----------

  ! eslint-plugin-unicorn(no-empty-file): Empty files are not allowed.
   ,-[main.js:1:1]
 1 | 
   : ^
   `----
  help: Delete this file or add some code to it.

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
